--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongo-utils": "^0.5.0",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-google-maps": "^9.4.5"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
