--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "react-google-maps": "^9.4.5"
+    "react-google-maps": "^9.4.5",
+    "react-helmet": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
