--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,8 @@
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-star-rating-component": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
