--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "yarn ./bin/www"
+    "start": "bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
