--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ejs": "~2.6.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.7.3",
     "mongo": "^0.1.0",
     "mongo-utils": "^0.5.0",
     "morgan": "~1.9.1",
