--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "bin/www"
+    "start": "nodemon bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -20,7 +20,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react-google-maps": "^9.4.5",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "ws": "^7.2.5"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
