--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-date-picker": "^8.0.1",
     "react-datepicker": "^2.15.0",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.0.0",
