--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "bin/www"
+    "start": "bin/www",
+    "test": "jest"
   },
   "dependencies": {
+    "babel-jest": "^26.0.1",
     "body-parser": "^1.19.0",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.4",
@@ -24,9 +26,12 @@
     "ws": "^7.2.5"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.5",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-jest": "^23.10.0",
     "eslint-plugin-react": "^7.19.0",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.3",
     "prettier": "^2.0.4"
   }
